--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+	implementation 'org.bytedeco:javacv:1.5.6'
+	implementation 'org.bytedeco:opencv:4.5.3-1.5.6'
+	implementation 'org.openpnp:opencv:4.5.1-2'
+
 
 }
 
